[package]
name = "subnet"
version = "0.1.0"
edition = "2021"
description = "A program to calculate IPv4 subnets based on a given address and the number of devices you want to connect to that network just for fun."
authors = ["P4k0"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
