[package]
name = "subnet"
version = "0.1.0"
edition = "2021"
description = "A library to create IPv4 subnetworks based on a given address and the number of hosts you want to connect."
readme = "README.md"
repository = "https://github.com/Pacatro/subnet.git"
license = "MIT OR Apache-2.0"
authors = ["P4k0"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
